# dsprs

./: .env  .envrc  Cargo.toml  env.default  flake.nix
dsp/: Cargo.toml
dsp/src/: error.rs  lib.rs
dsp/src/llm/: openai.rs
dsp/src/modules/: chain.rs  chain_of_thought.rs  mod.rs  predict.rs
dsp/src/templates/: default_prompt.jinja2
dsp_macros/: Cargo.toml
dsp_macros/src/: lib.rs
examples/: basic.rs
src/: context.rs  lib.rs  llm.rs
src/llm/: mod.rs  ollama.rs
src/modules/: chain.rs  mod.rs
src/templates/: prompt.jinja2
support/: bash-env.sh
