[package]
name = "dsp"
version = "0.0.1"
edition = "2021"

[dependencies]
async-openai = "0.19.0"
async-trait = "0.1.77"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
dsp_macros = { path = "../dsp_macros" }
ollama-rs = "0.1.7"
tera = "1.19.1"
serde = { version = "1.0.197", features = ["derive"] }
reqwest = "0.11.25"
lazy_static = "1.4.0"
schemars = { version = "0.8.16", features = ["preserve_order"] }

[[example]]
name = "basic"
path = "../examples/basic.rs"
